Added #default channel

--- a/ngircd.conf
+++ b/ngircd.conf
@@ -359,10 +359,10 @@
 	# There may be more than one [Channel] block, one for each channel.
 
 	# Name of the channel
-	;Name = #TheName
+	Name = #general
 
 	# Topic for this channel
-	;Topic = a great topic
+	Topic = This is the channel for general chat
 
 	# Initial channel modes
 	;Modes = tnk
