Moved from Ubuntu to Fedora.
Fixed default configuration, so I could
connect with xchat

--- a/ngircd.conf
+++ b/ngircd.conf
@@ -1,31 +1,7 @@
-#
-# This is a sample configuration file for the ngIRCd IRC daemon, which must
-# be customized to the local preferences and needs.
-#
-# Comments are started with "#" or ";".
-#
-# A lot of configuration options in this file start with a ";". You have
-# to remove the ";" in front of each variable to actually set a value!
-# The disabled variables are shown with example values for completeness only
-# and the daemon is using compiled-in default settings.
-#
-# Use "ngircd --configtest" (see manual page ngircd(8)) to validate that the
-# server interprets the configuration file as expected!
-#
-# Please see ngircd.conf(5) for a complete list of configuration options
-# and their descriptions.
-#
-
 [Global]
-	# The [Global] section of this file is used to define the main
-	# configuration of the server, like the server name and the ports
-	# on which the server should be listening.
-	# These settings depend on your personal preferences, so you should
-	# make sure that they correspond to your installation and setup!
-
 	# Server name in the IRC network, must contain at least one dot
 	# (".") and be unique in the IRC network. Required!
-	Name = irc.example.net
+	Name = default.local
 
 	# Information about the server and the administrator, used by the
 	# ADMIN command. Not required by server but by RFC!
@@ -45,11 +21,11 @@
 	# listen. Default values are:
 	# "0.0.0.0" or (if compiled with IPv6 support) "::,0.0.0.0"
 	# so the server listens on all IP addresses of the system by default.
-	;Listen = 127.0.0.1,192.168.0.1
+	Listen = 0.0.0.0
 
 	# Text file with the "message of the day" (MOTD). This message will
 	# be shown to all users connecting to the server:
-	;MotdFile = /usr/local/etc/ngircd.motd
+	MotdFile = /etc/ngircd.motd
 
 	# A simple Phrase (<256 chars) if you don't want to use a motd file.
 	;MotdPhrase = "Hello world!"
@@ -81,9 +57,6 @@
 	;ServerUID = 65534
 
 [Limits]
-	# Define some limits and timeouts for this ngIRCd instance. Default
-	# values should be safe, but it is wise to double-check :-)
-
 	# The server tries every <ConnectRetry> seconds to establish a link
 	# to not yet (or no longer) connected servers.
 	;ConnectRetry = 60
@@ -104,12 +77,12 @@
 	;MaxConnectionsIP = 5
 
 	# Maximum number of channels a user can be member of (0: no limit):
-	;MaxJoins = 10
+	;MaxJoins = 0
 
 	# Maximum length of an user nickname (Default: 9, as in RFC 2812).
 	# Please note that all servers in an IRC network MUST use the same
 	# maximum nickname length!
-	;MaxNickLength = 9
+	;MaxNickLength = 16
 
 	# Maximum number of channels returned in response to a /list
 	# command (0: unlimited):
@@ -124,10 +97,6 @@
 	;PongTimeout = 20
 
 [Options]
-	# Optional features and configuration options to further tweak the
-	# behavior of ngIRCd. If you want to get started quickly, you most
-	# probably don't have to make changes here -- they are all optional.
-
 	# List of allowed channel types (channel prefixes) for newly created
 	# channels on the local server. By default, all supported channel
 	# types are allowed. Set this variable to the empty string to disallow
@@ -171,20 +140,16 @@
 	;DefaultUserModes = i
 
 	# Do DNS lookups when a client connects to the server.
-	;DNS = yes
+	DNS = no
 
 	# Do IDENT lookups if ngIRCd has been compiled with support for it.
 	# Users identified using IDENT are registered without the "~" character
 	# prepended to their user name.
-	;Ident = yes
-
-	# Directory containing configuration snippets (*.conf), that should
-	# be read in after parsing this configuration file.
-	;IncludeDir = /usr/local/etc/conf.d
+	Ident = no
 
 	# Enhance user privacy slightly (useful for IRC server on TOR or I2P)
 	# by censoring some information like idle time, logon time, etc.
-	;MorePrivacy = no
+	MorePrivacy = no
 
 	# Normally ngIRCd doesn't send any messages to a client until it is
 	# registered. Enable this option to let the daemon send "NOTICE AUTH"
@@ -205,7 +170,7 @@
 	# Use PAM if ngIRCd has been compiled with support for it.
 	# Users identified using PAM are registered without the "~" character
 	# prepended to their user name.
-	;PAM = yes
+	PAM = No
 
 	# When PAM is enabled, all clients are required to be authenticated
 	# using PAM; connecting to the server without successful PAM
@@ -282,90 +247,10 @@
 	# Optional Mask from which /OPER will be accepted
 	;Mask = *!ident@somewhere.example.com
 
-[Operator]
-	# More [Operator] sections, if you like ...
-
-[Server]
-	# Other servers are configured in [Server] sections. If you
-	# configure a port for the connection, then this ngircd tries to
-	# connect to to the other server on the given port; if not it waits
-	# for the other server to connect.
-	# There may be more than one server block, one for each server.
-	#
-	# Server Groups:
-	# The ngIRCd allows "server groups": You can assign an "ID" to every
-	# server with which you want this ngIRCd to link. If a server of a
-	# group won't answer, the ngIRCd tries to connect to the next server
-	# in the given group. But the ngircd never tries to connect to two
-	# servers with the same group ID.
-
-	# IRC name of the remote server, must match the "Name" variable in
-	# the [Global] section of the other server (when using ngIRCd).
-	;Name = irc2.example.net
-
-	# Internet host name or IP address of the peer (only required when
-	# this server should establish the connection).
-	;Host = connect-to-host.example.net
-
-	# IP address to use as _source_ address for the connection. if
-	# unspecified, ngircd will let the operating system pick an address.
-	;Bind = 10.0.0.1
-
-	# Port of the server to which the ngIRCd should connect. If you
-	# assign no port the ngIRCd waits for incoming connections.
-	;Port = 6667
-
-	# Own password for the connection. This password has to be configured
-	# as "PeerPassword" on the other server.
-	;MyPassword = MySecret
-
-	# Foreign password for this connection. This password has to be
-	# configured as "MyPassword" on the other server.
-	;PeerPassword = PeerSecret
-
-	# Group of this server (optional)
-	;Group = 123
-
-	# Set the "Passive" option to "yes" if you don't want this ngIRCd to
-	# connect to the configured peer (same as leaving the "Port" variable
-	# empty). The advantage of this option is that you can actually
-	# configure a port an use the IRC command CONNECT more easily to
-	# manually connect this specific server later.
-	;Passive = no
-
-	# Connect to the remote server using TLS/SSL (Default: false)
-	;SSLConnect = yes
-
-	# Define a (case insensitive) list of masks matching nicknames that
-	# should be treated as IRC services when introduced via this remote
-	# server, separated by commas (",").
-	# REGULAR SERVERS DON'T NEED this parameter, so leave it empty
-	# (which is the default).
-	# When you are connecting IRC services which mask as a IRC server
-	# and which use "virtual users" to communicate with, for example
-	# "NickServ" and "ChanServ", you should set this parameter to
-	# something like "*Serv" or "NickServ,ChanServ,XyzServ".
-	;ServiceMask = *Serv,Global
-
-[Server]
-	# More [Server] sections, if you like ...
-
 [Channel]
-	# Pre-defined channels can be configured in [Channel] sections.
-	# Such channels are created by the server when starting up and even
-	# persist when there are no more members left.
-	# Persistent channels are marked with the mode 'P', which can be set
-	# and unset by IRC operators like other modes on the fly.
-	# There may be more than one [Channel] block, one for each channel.
-
-	# Name of the channel
 	Name = #general
-
-	# Topic for this channel
 	Topic = This is the channel for general chat
-
-	# Initial channel modes
-	;Modes = tnk
+	Modes = tn
 
 	# initial channel password (mode k)
 	;Key = Secret
@@ -376,8 +261,5 @@
 
 	# maximum users per channel (mode l)
 	;MaxUsers = 23
-
-[Channel]
-	# More [Channel] sections, if you like ...
 
 # -eof-
